--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1088,7 +1088,7 @@ audio {
 }
 .balloons h2 {
 	text-transform: uppercase;
-	font-family: 'Signika', sans-serif;
+	font-family: 'Mẹ Loan', sans-serif;
 	font-size: 50px;
 	color: #BF4136;
 	text-shadow: 5px 5px 5px #FFF;
@@ -1283,7 +1283,7 @@ audio {
 	display: none;
 }
 .message p {
-	font-family: 'Signika', sans-serif;
+	font-family: 'Mẹ Loan', sans-serif;
 	font-size: 30px;
 	text-transform: uppercase;
 	color: #C4515C;
@@ -1296,7 +1296,7 @@ audio {
         border-color: #466baf;
         padding: 10px;
         text-transform: uppercase;
-        font-family: 'Signika', sans-serif;
+        font-family: 'Mẹ Loan', sans-serif;
         font-weight: 700;
         color: #fff;
         background-color: #466baf;
